# Parallel_Library_of_Genetic_Algorithms

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Parallel_Library_of_Genetic_Algorithms  Parallel_Library_of_Genetic_Algorithms.cbp  cmake_install.cmake  finisher.cpp  finisher.h  generator.cpp  generator.h  genetic.cpp  genetic.h  genetic_def.h  main.cpp  mutator.cpp  mutator.h  recombinator.cpp  recombinator.h  selector.cpp  selector.h
data/: example.txt
visualization/: main.cpp  old_visualize.py  visualizator.cpp  visualizator.h  visualize.py  visualize_gif.py
